# XMR4EL

./: .dockerignore  .gitignore  MANIFEST.in  README.md  _requirements.txt  being_used_?_requirements.txt  dockerfile  dockerfile_gpu_test  pyproject.toml  requirements.txt  setup.py  xmrtree.pkl
.plot/: pyvenv.cfg
XMRTree_2025-03-25_12-22-39/: text_embeddings.npy  transformer_embeddings.npy
debug_folder/: debug_file_0.csv  debug_file_1.csv  debug_file_10.csv  debug_file_100.csv  debug_file_101.csv  debug_file_102.csv  debug_file_103.csv  debug_file_104.csv  debug_file_105.csv  debug_file_106.csv  debug_file_107.csv  debug_file_108.csv  debug_file_109.csv  debug_file_11.csv  debug_file_110.csv  debug_file_111.csv  debug_file_112.csv  debug_file_113.csv  debug_file_114.csv  debug_file_115.csv  debug_file_116.csv  debug_file_117.csv  debug_file_118.csv  debug_file_119.csv  debug_file_12.csv  debug_file_120.csv  debug_file_121.csv  debug_file_122.csv  debug_file_123.csv  debug_file_124.csv  debug_file_125.csv  debug_file_126.csv  debug_file_127.csv  debug_file_128.csv  debug_file_129.csv  debug_file_13.csv  debug_file_130.csv  debug_file_131.csv  debug_file_132.csv  debug_file_133.csv  (+265 more)
src/: gpu_availability.py
src/app/: main_evaluate.py  main_training.py  model_test.py  test.py  tester.py  testing_clustering.py  testing_evaluation.py  testing_graphs.py  testing_hierarchical_clustering.py  testing_hierarchical_linear.py  testing_linear.py  (+4 more)
test/: test_train_pipeline.py
test_vec/: bert_vectorizer.pkl  best_vec_config.json  vec_config.json  vectorizer.pkl
xmr4el/: __init__.py  _requirements.txt  gpu_availability.py
(+259 files in other folders)
