[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmr4el"
version = "0.5.2"
description = "eXtreme Multi-Label Ranking for Entity Linking"
authors = [
  { name="João Vedor", email="fc56311@alunos.fc.ul.pt" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "joblib",
  "numpy",
  "pandas",
  "psutil",
  "scikit_learn",
  "torch",
  "transformers",
  "sentence_transformers",
  "faiss-cpu",
  "lightgbm",
  "umap-learn",
  "fuzzywuzzy",
  "python-Levenshtein",
  "kmeans-pytorch @ git+https://github.com/kernelmachine/balanced-kmeans.git@main"
]