[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmr4el"
version = "0.5.3"
description = "eXtreme Multi-Label Ranking for Entity Linking"
authors = [
  { name="João Vedor", email="fc56311@alunos.fc.ul.pt" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "joblib",
  "numpy",
  "pandas",
  "psutil",
  "scikit-learn",
  "transformers",
  "sentence-transformers",
  "faiss-cpu",
  "lightgbm",
  "umap-learn",
  "fuzzywuzzy",
  "python-Levenshtein",

  # RAPIDS (CUDA 12.8 compatible):
  "cuml-cu12==25.03.*",
  "cudf-cu12==25.03.*",
  "rmm-cu12==25.03.*",
  "cupy-cuda12x>=13.6",

  # torch is installed from the cu128 index (see step 3), so omit version here or keep a loose marker:
  "torch>=2.8.0",
  
  "kmeans-pytorch @ git+https://github.com/kernelmachine/balanced-kmeans.git@main"
]